--- a/test.html
+++ b/test.html
@@ -6,14 +6,20 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Zoopraxiscope</title>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/default.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="csslib/default.css">
+	<link rel="stylesheet" href="csslib/main.css">
 </head>
 <body>
 
 	<div class="container">
 		<section class="scroll-section" id="scroll-section-0">
             <h1>zoopraxiscope</h1>
+			<div class="zoopraxiscope zoopraxiscope-canvas">
+				<canvas id="video-canvas-0" width="1920" height="1080"></canvas>
+			</div>
+			<div id="test" class="zoopraxiscope main-message">
+				<p>IU</p>
+			</div>
 		</section>
 	</div>
     <script src="js/lib.js"></script>
