--- a/test.html
+++ b/test.html
@@ -11,14 +11,20 @@
 </head>
 <body>
 
-	<div class="container">
-		<section class="scroll-section" id="scroll-section-0">
+	<div class="zoopraxiscope">
+		<section class="zoopraxiscope-section" id="forward">
             <h1>zoopraxiscope</h1>
-			<div class="zoopraxiscope zoopraxiscope-canvas">
-				<canvas id="video-canvas-0" width="1920" height="1080"></canvas>
-			</div>
-			<div id="test" class="zoopraxiscope main-message">
+			<div class="zoopraxiscope-sticky" id="iu">
 				<p>IU</p>
+			</div>
+			<div class="zoopraxiscope-sticky" id="story">
+				<p>myoldstory</p>
+			</div>
+		</section>
+		<section class="zoopraxiscope-section" id="backward">
+            <h1>epocsixarpooz</h1>
+			<div class="zoopraxiscope-sticky" id="ui">
+				<p>UI</p>
 			</div>
 		</section>
 	</div>
