text size, align, theme 추가

--- a/index.html
+++ b/index.html
@@ -13,18 +13,56 @@
 
 	<div class="zoopraxiscope">
 		<section class="zoopraxiscope-section" id="forward">
-            <h1>zoopraxiscope</h1>
+            <h1 class="text-center text-light">zoopraxiscope</h1>
 			<div class="zoopraxiscope-sticky" id="iu">
-				<p>IU</p>
+				<div class="text-box text-center text-light">
+					<h2>IU</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br/>
+						sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
+						Aliquet sagittis id consectetur purus ut faucibus.<br/>
+						Bibendum est ultricies integer quis auctor elit sed.<br/>
+						Ut tortor pretium viverra suspendisse potenti nullam.<br/>
+						Bibendum neque egestas congue quisque egestas diam in.<br/>
+						Erat velit scelerisque in dictum non.
+					</p>
+				</div>
 			</div>
 			<div class="zoopraxiscope-sticky" id="story">
-				<p>myoldstory</p>
+				<div class="text-box text-right text-light">
+					<h2>myoldstory</h2>
+					<p>
+						Sit amet porttitor eget dolor morbi non.<br/>
+						Elit ut aliquam purus sit amet luctus venenatis lectus magna.<br/>
+						Lorem sed risus ultricies tristique. Vitae aliquet nec ullamcorper sit amet risus nullam.<br/>
+						Suspendisse in est ante in nibh mauris cursus mattis.<br/>
+						Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae. Id consectetur purus ut faucibus pulvinar.
+					</p>
+				</div>
 			</div>
 		</section>
 		<section class="zoopraxiscope-section" id="backward">
-            <h1>epocsixarpooz</h1>
+			<div class="text-box text-left text-light">
+				<h1>epocsixarpooz</h1>
+				<p>
+					Egestas integer eget aliquet nibh praesent tristique magna sit.<br/>
+					Dui accumsan sit amet nulla facilisi.<br/>
+					Felis eget nunc lobortis mattis aliquam faucibus purus in.<br/>
+					Et magnis dis parturient montes nascetur ridiculus mus mauris.<br/>
+					Justo donec enim diam vulputate ut pharetra sit. Ornare massa eget egestas purus viverra.
+				</p>
+			</div>
 			<div class="zoopraxiscope-sticky" id="ui">
-				<p>UI</p>
+				<div class="text-box text-right text-light">
+					<h2>UI</h2>
+					<p>
+						Eu augue ut lectus arcu bibendum at.<br />
+						Placerat vestibulum lectus mauris ultrices eros in cursus turpis.<br />
+						Posuere lorem ipsum dolor sit amet consectetur adipiscing.<br />
+						Risus nullam eget felis eget nunc lobortis mattis aliquam faucibus.<br />
+						Est ultricies integer quis auctor elit sed vulputate mi.
+					</p>
+				</div>
 			</div>
 		</section>
 	</div>
