--- a/index.html
+++ b/index.html
@@ -45,22 +45,25 @@
           </div>
         </div>
       </section>
+
       <section class="zoopraxiscope-section" id="middle">
-        <div class="text-box text-center text-light">
-          <h1>epocsixarpooz</h1>
-          <p>
-            Egestas integer eget aliquet nibh praesent tristique magna sit.<br />
-            Dui accumsan sit amet nulla facilisi.<br />
-            Felis eget nunc lobortis mattis aliquam faucibus purus in.<br />
-            Et magnis dis parturient montes nascetur ridiculus mus mauris.<br />
-            Justo donec enim diam vulputate ut pharetra sit. Ornare massa eget
-            egestas purus viverra.
-          </p>
+        <div id="void_example">
+          <div class="text-box text-center">
+            <h1>epocsixarpooz</h1>
+            <p>
+              Egestas integer eget aliquet nibh praesent tristique magna sit.<br />
+              Dui accumsan sit amet nulla facilisi.<br />
+              Felis eget nunc lobortis mattis aliquam faucibus purus in.<br />
+              Et magnis dis parturient montes nascetur ridiculus mus mauris.<br />
+              Justo donec enim diam vulputate ut pharetra sit. Ornare massa eget
+              egestas purus viverra.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="zoopraxiscope-section" id="backward">
-        <div class="zoopraxiscope-sticky" id="story">
+        <div class="zoopraxiscope-sticky" id="epoc">
           <div class="text-box text-left text-light">
             <h1>epocsixarpooz</h1>
             <p>
